# s051cmake-console-snake

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: main.cpp
